update assignment files

--- a/TTTP6234_Assignment1_P101447_HOOYT.ipynb
+++ b/TTTP6234_Assignment1_P101447_HOOYT.ipynb
@@ -44,10 +44,10 @@
       "metadata": {
         "id": "o0nn6Uw9m67n",
         "colab_type": "code",
-        "outputId": "d411cf37-4540-4b3a-d576-c33444b68a91",
+        "outputId": "da16e474-8661-4827-b226-3e112bb5d44b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 187
+          "height": 199
         }
       },
       "source": [
@@ -126,7 +126,8 @@
         "  ## CHECK BY SPACY FIRST\n",
         "  spacy_words = nlp(u''+setence+'')\n",
         "  for token in spacy_words:\n",
-        "    if token.pos_ == 'ADV':\n",
+        "    if token.pos_ == 'ADJ':\n",
+        "      #print(\"SPACY: {}:{}\".format(token.text, token.pos_))\n",
         "      words.append(token.text)\n",
         "\n",
         "  ## CHECK BY NLTK\n",
@@ -134,6 +135,7 @@
         "  for stc in nltk_words:\n",
         "    nltk_token = nltk.pos_tag(nltk.word_tokenize(stc))\n",
         "    if nltk_token[0][1] == 'JJ' and nltk_token[0][0] not in words:\n",
+        "      #print(\"NTLK : {}:{}\".format(nltk_token[0][0], nltk_token[0][1]))\n",
         "      words.append(nltk_token[0][0])\n",
         "    \n",
         "  return words\n",
@@ -169,7 +171,14 @@
       },
       "source": [
         "### 3.0 GENERATE LEXICON SENTIMENT FILE\n",
-        "This is the function to generate the lexicon sentiment csv file"
+        "This is the function to generate the lexicon sentiment csv file by using following steps\n",
+        "\n",
+        "1. Extract only words from the sentence\n",
+        "2. Remove all stopwords\n",
+        "3. Return only adjective words\n",
+        "4. Assign +1 to the words from Positive Review file and -1 for Negative Review. Only keep unique words in the same files.\n",
+        "5. Saved the dataframe to csv file\n",
+        "\n"
       ]
     },
     {
@@ -222,7 +231,8 @@
         "colab_type": "text"
       },
       "source": [
-        "### 4.0 GENERATE POSITIVE LEXICON SENTIMENT"
+        "### 4.0 GENERATE POSITIVE LEXICON SENTIMENT\n",
+        "Download [politic_issues_positive_reviews.csv](https://drive.google.com/drive/folders/1XgpcZJrtyJs9GxccH2TfJHSruvHFjJHg?usp=sharing) and upload it to this workspace"
       ]
     },
     {
@@ -230,10 +240,10 @@
       "metadata": {
         "id": "MpNdz3QStZe5",
         "colab_type": "code",
-        "outputId": "5abe2985-5aa6-4e53-94c1-99c1d10b478f",
+        "outputId": "d324abb1-eda0-4197-f834-c1026a9c258b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 72
         }
       },
       "source": [
@@ -246,8 +256,8 @@
         {
           "output_type": "stream",
           "text": [
-            "Total Adjective Words: 158\n",
-            "Total Final Words: 104\n",
+            "Total Adjective Words: 164\n",
+            "Total Final Words: 110\n",
             "lexicon_political_positive.csv is created!\n"
           ],
           "name": "stdout"
@@ -262,7 +272,7 @@
       },
       "source": [
         "### 5.0 GENERATE NEGATIVE LEXICON SENTIMENT\n",
-        "\n"
+        "Download [politic_issues_negative_reviews.csv](https://drive.google.com/drive/folders/1XgpcZJrtyJs9GxccH2TfJHSruvHFjJHg?usp=sharing) and upload it to this workspace\n"
       ]
     },
     {
@@ -270,10 +280,10 @@
       "metadata": {
         "id": "8bV9xdcZoLGl",
         "colab_type": "code",
-        "outputId": "c5267f95-451d-4b8f-ca0f-6b035e511bea",
+        "outputId": "18cbb6a7-367d-439c-f38a-3b0ee462aa58",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 72
         }
       },
       "source": [
@@ -286,8 +296,8 @@
         {
           "output_type": "stream",
           "text": [
-            "Total Adjective Words: 152\n",
-            "Total Final Words: 100\n",
+            "Total Adjective Words: 196\n",
+            "Total Final Words: 127\n",
             "lexicon_political_negative.csv is created!\n"
           ],
           "name": "stdout"
@@ -310,10 +320,10 @@
       "metadata": {
         "id": "OS1fwvn2COLk",
         "colab_type": "code",
-        "outputId": "97a39743-52d1-44d7-d1f7-181d1f23c945",
+        "outputId": "e9090289-7d2f-40ee-8c62-d096700eb0cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 442
+          "height": 472
         }
       },
       "source": [
@@ -370,31 +380,31 @@
         {
           "output_type": "stream",
           "text": [
-            "pos_list: 104\n",
-            "neg_list: 100\n",
+            "pos_list: 110\n",
+            "neg_list: 127\n",
             "all_list: 0\n",
             "- COMPARE POSITIVE IN NEGATIVE\n",
-            "pos_list: 104\n",
-            "neg_list: 100\n",
-            "all_list: 104\n",
+            "pos_list: 110\n",
+            "neg_list: 127\n",
+            "all_list: 110\n",
             "- COMPARE NEGATIVE IN MASTER\n",
-            "pos_list: 104\n",
-            "neg_list: 100\n",
-            "all_list: 174\n",
+            "pos_list: 110\n",
+            "neg_list: 127\n",
+            "all_list: 206\n",
             "           word  Score\n",
-            "0          also      1\n",
-            "1       cynical      1\n",
-            "2    indigenous      0\n",
-            "3         aware      1\n",
-            "4    successful      0\n",
+            "0       sarcasm      1\n",
+            "1      conveyed      1\n",
+            "2       cynical      1\n",
+            "3    indigenous      0\n",
+            "4         aware      1\n",
             "..          ...    ...\n",
-            "169     umpteen     -1\n",
-            "170    actually     -1\n",
-            "171     exactly     -1\n",
-            "172       moral     -1\n",
-            "173   regularly     -1\n",
+            "201    national     -1\n",
+            "202     umpteen     -1\n",
+            "203       moral     -1\n",
+            "204     worrior     -1\n",
+            "205        long     -1\n",
             "\n",
-            "[174 rows x 2 columns]\n"
+            "[206 rows x 2 columns]\n"
           ],
           "name": "stdout"
         }
