--- a/TTTP6234_Assignment2_P101447_HOOYT.ipynb
+++ b/TTTP6234_Assignment2_P101447_HOOYT.ipynb
@@ -44,11 +44,11 @@
       "metadata": {
         "id": "o0nn6Uw9m67n",
         "colab_type": "code",
+        "outputId": "69df0df1-6dcd-4f70-c429-f8fa118de33b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "69df0df1-6dcd-4f70-c429-f8fa118de33b"
+        }
       },
       "source": [
         "import pandas as pd\n",
@@ -56,7 +56,7 @@
         "import csv\n",
         "nltk.download('punkt')"
       ],
-      "execution_count": 72,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,8 +117,7 @@
         "Functions that can be reused\n",
         "\n",
         "* assess_review_file - Function to process the Reviews file\n",
-        "* assess_positive_accuracy - To Assess the accuracy for +ve Review files\n",
-        "* assess_negative_accuracy - To Assess the accuracy for -ve Review files\n",
+        "* assess_accuracy - Function to check the accurary\n",
         "\n"
       ]
     },
@@ -219,7 +218,7 @@
         "PositiveReviews = assess_review_file(\"politic_issues_positive_reviews.csv\", \"PositiveFile\")\n",
         "assess_accuracy(PositiveReviews)\n"
       ],
-      "execution_count": 96,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -654,7 +653,7 @@
         "NegativeReviews = assess_review_file(\"politic_issues_negative_reviews.csv\", \"NegativeFile\")\n",
         "assess_accuracy(NegativeReviews)"
       ],
-      "execution_count": 97,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
