--- a/topic2_restaurant/TTTP6234_Restaurant_Assignment1_P101447_HOOYT.ipynb
+++ b/topic2_restaurant/TTTP6234_Restaurant_Assignment1_P101447_HOOYT.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "TTTP6234 - Assignment1_P101447_HOOYT.ipynb",
+      "name": "TTTP6234_Restaurant_Assignment1_P101447_HOOYT.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true
@@ -22,7 +22,7 @@
       },
       "source": [
         "# Assignment #1\n",
-        "## Topic: Political Reviews - Generate Lexicon Sentiment\n",
+        "## Topic: Restaurant Reviews - Generate Lexicon Sentiment\n",
         "\n",
         "Name: **Hoo Yee Torng** </br>\n",
         "Matrix: **P101447**"
@@ -44,7 +44,7 @@
       "metadata": {
         "id": "o0nn6Uw9m67n",
         "colab_type": "code",
-        "outputId": "a86273a9-3f58-4724-d6d1-725e15c9d97e",
+        "outputId": "7d4936c6-e924-415d-da24-b6372ffcc388",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 181
@@ -69,7 +69,7 @@
         "\n",
         "lemmatizer = WordNetLemmatizer()"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,24 +241,24 @@
       "metadata": {
         "id": "MpNdz3QStZe5",
         "colab_type": "code",
-        "outputId": "d4998b85-842c-42b4-e06f-53a026f538b5",
+        "outputId": "b005fe0e-f710-4cb4-a1c2-867f07f5d18e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
         }
       },
       "source": [
-        "positive_df = pd.read_csv('politic_issues_positive_reviews.csv', index_col=None)  \n",
+        "positive_df = pd.read_csv('restaurant_positive_review.csv', index_col=None)  \n",
         "positive_df.rename(columns={\"Google Translate\": \"original\"}, errors=\"raise\", inplace=True)\n",
         "out_pos_df = create_lexicon_sentiment(positive_df, 1, \"lexicon_political_positive.csv\")"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Total Adjective Words: 237\n",
-            "Total Final Words: 155\n",
+            "Total Adjective Words: 304\n",
+            "Total Final Words: 129\n",
             "lexicon_political_positive.csv is created!\n"
           ],
           "name": "stdout"
@@ -281,24 +281,24 @@
       "metadata": {
         "id": "8bV9xdcZoLGl",
         "colab_type": "code",
-        "outputId": "fc4c4757-f41e-4828-b94e-98d9d4157602",
+        "outputId": "c2c91bd6-cacf-4e35-e1aa-a8a780d243e8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
         }
       },
       "source": [
-        "negative_df = pd.read_csv('politic_issues_negative_reviews.csv', index_col=None)  \n",
+        "negative_df = pd.read_csv('restaurant_negative_review.csv', index_col=None)  \n",
         "negative_df.rename(columns={\"Google Translate\": \"original\"}, errors=\"raise\", inplace=True)\n",
         "out_neg_df = create_lexicon_sentiment(negative_df, -1, \"lexicon_political_negative.csv\")"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Total Adjective Words: 244\n",
-            "Total Final Words: 163\n",
+            "Total Adjective Words: 291\n",
+            "Total Final Words: 170\n",
             "lexicon_political_negative.csv is created!\n"
           ],
           "name": "stdout"
@@ -321,7 +321,7 @@
       "metadata": {
         "id": "OS1fwvn2COLk",
         "colab_type": "code",
-        "outputId": "b447f685-a16e-4087-afae-2d79f0a93d7d",
+        "outputId": "ea2b1d21-4d93-432e-9d18-5ffc5fe98f2e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
@@ -376,36 +376,36 @@
         "print(alldf)\n",
         "alldf.to_csv(\"lexicon_political_master.csv\", index=False)"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "pos_list: 155\n",
-            "neg_list: 163\n",
+            "pos_list: 129\n",
+            "neg_list: 170\n",
             "all_list: 0\n",
             "- COMPARE POSITIVE IN NEGATIVE\n",
-            "pos_list: 155\n",
-            "neg_list: 163\n",
-            "all_list: 155\n",
+            "pos_list: 129\n",
+            "neg_list: 170\n",
+            "all_list: 129\n",
             "- COMPARE NEGATIVE IN MASTER\n",
-            "pos_list: 155\n",
-            "neg_list: 163\n",
-            "all_list: 277\n",
-            "           word  Score\n",
-            "0       sarcasm      1\n",
-            "1      conveyed      1\n",
-            "2       cynical      1\n",
-            "3    indigenous      0\n",
-            "4          also      1\n",
-            "..          ...    ...\n",
-            "272    actually     -1\n",
-            "273     exactly     -1\n",
-            "274       moral     -1\n",
-            "275     worrior     -1\n",
-            "276   regularly     -1\n",
+            "pos_list: 129\n",
+            "neg_list: 170\n",
+            "all_list: 263\n",
+            "       word  Score\n",
+            "0     yummy      1\n",
+            "1      best      0\n",
+            "2     juicy      1\n",
+            "3    indeed      1\n",
+            "4     jumbo      1\n",
+            "..      ...    ...\n",
+            "258  sampai     -1\n",
+            "259   scary     -1\n",
+            "260  severe     -1\n",
+            "261   ready     -1\n",
+            "262    last     -1\n",
             "\n",
-            "[277 rows x 2 columns]\n"
+            "[263 rows x 2 columns]\n"
           ],
           "name": "stdout"
         }
