--- a/TTTP6234_Assignment1_P101447_HOOYT.ipynb
+++ b/TTTP6234_Assignment1_P101447_HOOYT.ipynb
@@ -44,10 +44,10 @@
       "metadata": {
         "id": "o0nn6Uw9m67n",
         "colab_type": "code",
-        "outputId": "a86273a9-3f58-4724-d6d1-725e15c9d97e",
+        "outputId": "3fc2e178-713b-429c-ff59-685b5e353649",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 181
+          "height": 199
         }
       },
       "source": [
@@ -57,6 +57,7 @@
         "from nltk.stem import PorterStemmer\n",
         "from nltk.stem import LancasterStemmer\n",
         "from nltk.corpus import stopwords\n",
+        "from nltk.corpus import wordnet\n",
         "import re\n",
         "import spacy\n",
         "\n",
@@ -67,7 +68,7 @@
         "nltk.download('averaged_perceptron_tagger')\n",
         "stop_words = set(stopwords.words('english'))\n",
         "\n",
-        "lemmatizer = WordNetLemmatizer()"
+        "lemmatizer = WordNetLemmatizer()\n"
       ],
       "execution_count": 1,
       "outputs": [
@@ -75,14 +76,15 @@
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
             "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/wordnet.zip.\n",
+            "[nltk_data]   Package wordnet is already up-to-date!\n",
             "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
             "[nltk_data]     /root/nltk_data...\n",
-            "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger.zip.\n"
+            "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+            "[nltk_data]       date!\n"
           ],
           "name": "stdout"
         }
@@ -202,7 +204,7 @@
         "    input_review = extract_words(input_review)\n",
         "    input_review = lemmatized_remove_stopword(input_review)\n",
         "    input_words = get_adjective_word(input_review)\n",
-        "\n",
+        "    \n",
         "    for word in input_words:\n",
         "      ttl_adj_words += 1\n",
         "\n",
@@ -241,7 +243,7 @@
       "metadata": {
         "id": "MpNdz3QStZe5",
         "colab_type": "code",
-        "outputId": "d4998b85-842c-42b4-e06f-53a026f538b5",
+        "outputId": "ffd92702-f74b-4a64-ca7d-aa8c5a2e449c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -281,7 +283,7 @@
       "metadata": {
         "id": "8bV9xdcZoLGl",
         "colab_type": "code",
-        "outputId": "fc4c4757-f41e-4828-b94e-98d9d4157602",
+        "outputId": "a67e3f9e-7b65-4d8a-8085-8531c60ea264",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -321,7 +323,7 @@
       "metadata": {
         "id": "OS1fwvn2COLk",
         "colab_type": "code",
-        "outputId": "b447f685-a16e-4087-afae-2d79f0a93d7d",
+        "outputId": "dc7ce7b9-5d51-4bf1-d0b4-cc72ccfc2937",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
