--- a/TTTP6234_Assignment3_P101447_HOOYT.ipynb
+++ b/TTTP6234_Assignment3_P101447_HOOYT.ipynb
@@ -47,11 +47,11 @@
       "metadata": {
         "id": "tRJqjYPoWnAw",
         "colab_type": "code",
+        "outputId": "df42433c-673c-49a9-fc65-39757e01d59f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 181
-        },
-        "outputId": "244e09f1-1bbb-47ef-8348-f944397044a8"
+        }
       },
       "source": [
         "import pandas as pd\n",
@@ -131,7 +131,7 @@
         "scrolled": true,
         "id": "o9xfoBVDWnA3",
         "colab_type": "code",
-        "outputId": "afeca31d-9fd1-435a-aa95-2248b6020421",
+        "outputId": "f729f9f5-39d0-472c-b9b0-e5e5500242f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 90
@@ -188,7 +188,7 @@
       "metadata": {
         "id": "XLxOHMSFWnBI",
         "colab_type": "code",
-        "outputId": "fbdb3d8c-40ba-472a-e28f-c5cfda516564",
+        "outputId": "d6a27aec-cecc-421b-8151-4e63cc2b976b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 279
@@ -311,15 +311,26 @@
         "  print(\"- \" + feature_name)\n",
         "  print(\"-----------------------------------------------------------------------------\")\n",
         "\n",
-        "  clf_dict = {\n",
-        "    'GradientBoostingClassifier': GradientBoostingClassifier(n_estimators=100),\n",
-        "    'RandomForestClassifier': RandomForestClassifier(n_estimators=100, random_state=0),\n",
-        "    'MultinomialNB': MultinomialNB(),\n",
-        "    'ANN': MLPClassifier(solver='adam', hidden_layer_sizes=(35,15), random_state=2, activation='relu', max_iter=5000, learning_rate='invscaling'),\n",
-        "    'SVN': svm.SVC(C=1.0, kernel='rbf', degree=3, gamma='scale', coef0=0.0, shrinking=True, probability=False, tol=0.001, cache_size=200, class_weight=None, verbose=False, max_iter=2000, decision_function_shape='ovr', random_state=2),\n",
-        "    'LinearSVC': LinearSVC(penalty='l2', loss='squared_hinge', dual=True, tol=0.001, C=1.0, multi_class='ovr', fit_intercept=True, intercept_scaling=1, class_weight=None, verbose=0, random_state=None, max_iter=30000),\n",
-        "    'LogisticRegression': LogisticRegression(random_state=42, max_iter=8000, multi_class='auto', solver='saga'),\n",
-        "  }\n",
+        "  if feature_name == \"Doc2Vec\":\n",
+        "    clf_dict = {\n",
+        "      'GradientBoostingClassifier': GradientBoostingClassifier(n_estimators=100),\n",
+        "      'RandomForestClassifier': RandomForestClassifier(n_estimators=100, random_state=0),\n",
+        "      'GaussianNB': GaussianNB(),\n",
+        "      'ANN': MLPClassifier(solver='adam', hidden_layer_sizes=(35,15), random_state=2, activation='relu', max_iter=5000, learning_rate='invscaling'),\n",
+        "      'SVN': svm.SVC(C=1.0, kernel='rbf', degree=3, gamma='scale', coef0=0.0, shrinking=True, probability=False, tol=0.001, cache_size=200, class_weight=None, verbose=False, max_iter=2000, decision_function_shape='ovr', random_state=2),\n",
+        "      'LinearSVC': LinearSVC(penalty='l2', loss='squared_hinge', dual=True, tol=0.001, C=1.0, multi_class='ovr', fit_intercept=True, intercept_scaling=1, class_weight=None, verbose=0, random_state=None, max_iter=30000),\n",
+        "      'LogisticRegression': LogisticRegression(random_state=42, max_iter=8000, multi_class='auto', solver='saga'),\n",
+        "    }    \n",
+        "  else:\n",
+        "    clf_dict = {\n",
+        "      'GradientBoostingClassifier': GradientBoostingClassifier(n_estimators=100),\n",
+        "      'RandomForestClassifier': RandomForestClassifier(n_estimators=100, random_state=0),\n",
+        "      'MultinomialNB': MultinomialNB(),\n",
+        "      'ANN': MLPClassifier(solver='adam', hidden_layer_sizes=(35,15), random_state=2, activation='relu', max_iter=5000, learning_rate='invscaling'),\n",
+        "      'SVN': svm.SVC(C=1.0, kernel='rbf', degree=3, gamma='scale', coef0=0.0, shrinking=True, probability=False, tol=0.001, cache_size=200, class_weight=None, verbose=False, max_iter=2000, decision_function_shape='ovr', random_state=2),\n",
+        "      'LinearSVC': LinearSVC(penalty='l2', loss='squared_hinge', dual=True, tol=0.001, C=1.0, multi_class='ovr', fit_intercept=True, intercept_scaling=1, class_weight=None, verbose=0, random_state=None, max_iter=30000),\n",
+        "      'LogisticRegression': LogisticRegression(random_state=42, max_iter=8000, multi_class='auto', solver='saga'),\n",
+        "    }\n",
         "\n",
         "  for name, clf in clf_dict.items():\n",
         "    clf.fit(xtrain, ytrain) \n",
@@ -338,11 +349,11 @@
       "metadata": {
         "id": "bzR6Ep1hWnBn",
         "colab_type": "code",
+        "outputId": "5d2d9f22-a5e9-4175-ef26-028c4c5649b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "c7e6f779-0d12-4418-a9cf-ef26b7d7bfc0"
+        }
       },
       "source": [
         "features = df['review'].values\n",
@@ -354,7 +365,7 @@
         "print('Number of rows in the training set: {}'.format(sentences_train.shape[0]))\n",
         "print('Number of rows in the test set: {}'.format(sentences_test.shape[0]))"
       ],
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,7 +385,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## 4.1 FEATURE-BOW"
+        "## 4.1 FEATURE - BOW"
       ]
     },
     {
@@ -386,7 +397,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 928
         },
-        "outputId": "cb23081e-a7ba-4640-b920-1ccaf6dbdda8"
+        "outputId": "ff24703e-518e-434f-fa61-55884061e3a3"
       },
       "source": [
         "BOW = CountVectorizer()\n",
@@ -395,7 +406,7 @@
         "XX_test  = BOW.transform(sentences_test)\n",
         "run_ML(\"BOW\", XX_train, yy_train, XX_test, yy_test)"
       ],
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -479,7 +490,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## 3.3 FEATURE-TF-IDF"
+        "## 4.2 FEATURE-TF - IDF"
       ]
     },
     {
@@ -487,11 +498,11 @@
       "metadata": {
         "id": "FlGFChWNWnBw",
         "colab_type": "code",
-        "outputId": "d6e01741-af81-4908-dce3-2d89712ead36",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 928
-        }
+        },
+        "outputId": "4f75b0b6-f895-4ca8-b36c-8ef12a147410"
       },
       "source": [
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -502,7 +513,7 @@
         "\n",
         "run_ML(\"TF-IDF\", XXX_train, yy_train, XXX_test, yy_test)"
       ],
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -582,26 +593,277 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "luCQm8-V_VlU",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 4.3 Feature - Doc2Vec"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p0Yvw434AQcm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import multiprocessing\n",
+        "from gensim.models import Doc2Vec\n",
+        "from gensim.models.doc2vec import TaggedDocument\n",
+        "cores = multiprocessing.cpu_count()\n",
+        "from tqdm import tqdm\n",
+        "from sklearn import utils\n",
+        "\n",
+        "def tokenize_text(text):\n",
+        "    tokens = []\n",
+        "    for sent in nltk.sent_tokenize(text):\n",
+        "        for word in nltk.word_tokenize(sent):\n",
+        "            if len(word) < 2:\n",
+        "                continue\n",
+        "            tokens.append(word.lower())\n",
+        "    return tokens"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CmHRO1nj_fY5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "b21d48f2-5f84-4b2b-94a9-dcf1633bff6e"
+      },
+      "source": [
+        "# SPLIT TO 9:1\n",
+        "doc2vec_train, doc2vec_test = train_test_split(df, test_size=0.1, random_state=42, shuffle=True)\n",
+        "\n",
+        "# CONVERT TO DOC TO VEC FORMAT\n",
+        "train_tagged = doc2vec_train.apply(lambda r: TaggedDocument(words=tokenize_text(r['review']), tags=[r.label]), axis=1)\n",
+        "test_tagged = doc2vec_test.apply(lambda r: TaggedDocument(words=tokenize_text(r['review']), tags=[r.label]), axis=1)\n",
+        "\n",
+        "\n",
+        "# dm :: dm=1, 'distributed memory' (PV-DM), 0=BOW\n",
+        "# vector_size :: Dimensionality of the feature vectors\n",
+        "# negative ::  0 = no negative sampling is used.\n",
+        "# hs :: If 1, hierarchical softmax will be used for model training. If set to 0, and negative is non-zero, negative sampling will be used.\n",
+        "# min_count (int, optional) – Ignores all words with total frequency lower than this.\n",
+        "# sample (float, optional) – The threshold for configuring which higher-frequency words are randomly downsampled, useful range is (0, 1e-5).\n",
+        "# workers (int, optional) – Use these many worker threads to train the model (=faster training with multicore machines).\n",
+        "\n",
+        "model_dbow = Doc2Vec(dm=0, vector_size=300, negative=5, hs=0, min_count=2, sample=0, workers=cores)\n",
+        "model_dbow.build_vocab([x for x in tqdm(train_tagged.values)])\n"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 90/90 [00:00<00:00, 63485.93it/s]\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mSBx7K7OvuI5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 599
+        },
+        "outputId": "c872f6bd-1d95-4431-dddc-5afcf902ed3a"
+      },
+      "source": [
+        "%%time\n",
+        "for epoch in range(30):\n",
+        "    model_dbow.train(utils.shuffle([x for x in tqdm(train_tagged.values)]), total_examples=len(train_tagged.values), epochs=100)\n",
+        "    model_dbow.alpha -= 0.002\n",
+        "    model_dbow.min_alpha = model_dbow.alpha"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 90/90 [00:00<00:00, 85404.38it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 20811.96it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 17803.49it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 15068.15it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 16596.50it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 313788.33it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 30257.08it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 17336.61it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 16207.43it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 252162.57it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 12796.62it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 310945.11it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 17075.47it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 17386.92it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 74779.59it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 12753.38it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 16765.29it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 246723.76it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 251658.24it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 19227.19it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 163485.21it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 240131.91it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 212310.10it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 218200.79it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 14193.39it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 215460.82it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 292852.88it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 15449.27it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 138578.33it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 72468.30it/s]\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "CPU times: user 13.8 s, sys: 1.02 s, total: 14.8 s\n",
+            "Wall time: 16.1 s\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n_3pv7dawC0N",
+        "colab_type": "code",
+        "outputId": "c0dc9b9d-8a75-409f-ec79-02ecd031537b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 892
+        }
+      },
+      "source": [
+        "def vec_for_learning(model, tagged_docs):\n",
+        "    sents = tagged_docs.values\n",
+        "    targets, regressors = zip(*[(doc.tags[0], model.infer_vector(doc.words, steps=20)) for doc in sents])\n",
+        "    return targets, regressors\n",
+        "\n",
+        "y_train, X_train = vec_for_learning(model_dbow, train_tagged)\n",
+        "y_test, X_test = vec_for_learning(model_dbow, test_tagged)\n",
+        "\n",
+        "run_ML(\"Doc2Vec\", X_train, y_train, X_test, y_test)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-----------------------------------------------------------------------------\n",
+            "- Doc2Vec\n",
+            "-----------------------------------------------------------------------------\n",
+            "-- GradientBoostingClassifier\n",
+            "Testing accuracy: 50.00%\n",
+            "Testing F1 score: 49.00%\n",
+            "Testing Precision score: 55.00%\n",
+            "Testing Recall score: 54.00% \n",
+            "\n",
+            "-- RandomForestClassifier\n",
+            "Testing accuracy: 40.00%\n",
+            "Testing F1 score: 38.00%\n",
+            "Testing Precision score: 38.00%\n",
+            "Testing Recall score: 38.00% \n",
+            "\n",
+            "-- GaussianNB\n",
+            "Testing accuracy: 40.00%\n",
+            "Testing F1 score: 29.00%\n",
+            "Testing Precision score: 25.00%\n",
+            "Testing Recall score: 33.00% \n",
+            "\n",
+            "-- ANN\n",
+            "Testing accuracy: 20.00%\n",
+            "Testing F1 score: 20.00%\n",
+            "Testing Precision score: 21.00%\n",
+            "Testing Recall score: 21.00% \n",
+            "\n",
+            "-- SVN\n",
+            "Testing accuracy: 40.00%\n",
+            "Testing F1 score: 29.00%\n",
+            "Testing Precision score: 20.00%\n",
+            "Testing Recall score: 50.00% \n",
+            "\n",
+            "-- LinearSVC\n",
+            "Testing accuracy: 30.00%\n",
+            "Testing F1 score: 29.00%\n",
+            "Testing Precision score: 31.00%\n",
+            "Testing Recall score: 33.00% \n",
+            "\n",
+            "-- LogisticRegression\n",
+            "Testing accuracy: 20.00%\n",
+            "Testing F1 score: 17.00%\n",
+            "Testing Precision score: 12.00%\n",
+            "Testing Recall score: 25.00% \n",
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "UsS02GXbWnB2",
         "colab_type": "text"
       },
       "source": [
         "### REPORT :<br>\n",
         "\n",
-        "DOC2VEC/LR:  <br>\n",
-        "DOC2VEC/SVM:\n",
-        "DOC2VEC/NB:\n",
+        "#### BOW\n",
         "\n",
-        "BOW/LR:<br>\n",
-        "BOW/SVM:<br>\n",
-        "BOW/NB:<br>\n",
+        "| Classifier | Accuracy | F1 | Precision | Recall | \n",
+        "| ------------- | ------------- | ------------- | ------------- | ------------- |\n",
+        "| Gradient Boosting | 50.00% | 45.00% | 72.00% | 58.00% |\n",
+        "| Random Forest | 40.00% | 29.00% | 20.00% | 50.00% |\n",
+        "| Multinomial NB | 60.00% | 58.00% | 75.00% | 67.00% |\n",
+        "| ANN | 70.00% | 70.00% | 79.00% | 75.00% |\n",
+        "| SVN | 40.00% | 29.00% | 20.00% | 50.00% |\n",
+        "| Linear | 70.00% | 70.00% | 79.00% | 75.00% |\n",
+        "| Logistic Regression | 60.00% | 58.00% | 75.00% | 67.00% |\n",
         "\n",
-        "TFIDF/LR:<br>\n",
-        "TFIDF/SVM:<br>\n",
-        "TFIDF/NB:<br>\n",
+        "#### TF-IDF\n",
         "\n",
-        "-------\n",
-        "What is the best classification model?\n"
+        "| Classifier | Accuracy | F1 | Precision | Recall | \n",
+        "| ------------- | ------------- | ------------- | ------------- | ------------- |\n",
+        "| Gradient Boosting | 50.00% | 49.00% | 55.00% | 54.00% |\n",
+        "| Random Forest | 40.00% | 29.00% | 20.00% | 50.00% |\n",
+        "| Multinomial NB | 50.00% | 45.00% | 72.00% | 58.00% |\n",
+        "| ANN | 70.00% | 70.00% | 79.00% | 75.00% |\n",
+        "| SVN | 40.00% | 29.00% | 20.00% | 50.00% |\n",
+        "| Linear | 70.00% | 70.00% | 79.00% | 75.00% |\n",
+        "| Logistic Regression | 50.00% | 45.00% | 72.00% | 58.00% |\n",
+        "\n",
+        "#### DOC2VEC\n",
+        "\n",
+        "| Classifier | Accuracy | F1 | Precision | Recall | \n",
+        "| ------------- | ------------- | ------------- | ------------- | ------------- |\n",
+        "| Gradient Boosting | 50.00% | 49.00% | 55.00% | 54.00% |\n",
+        "| Random Forest | 40.00% | 38.00% | 38.00% | 38.00% |\n",
+        "| Gaussian NB | 40.00% | 29.00% | 25.00% | 33.00% |\n",
+        "| ANN | 20.00% | 20.00% | 21.00% | 21.00% |\n",
+        "| SVN | 40.00% | 29.00% | 20.00% | 50.00% |\n",
+        "| Linear | 30.00% | 29.00% | 31.00% | 33.00% |\n",
+        "| Logistic Regression | 20.00% | 17.00% | 12.00% | 25.00% |\n"
       ]
     },
     {
@@ -611,7 +873,12 @@
         "colab_type": "text"
       },
       "source": [
-        "answer = TF-IDF with LR"
+        "**Answer**\n",
+        "* BOW with ANN\n",
+        "* BOW with Linear Regression\n",
+        "* TD-IDF with ANN\n",
+        "* TD-IDF with Linear Regression\n",
+        "\n"
       ]
     }
   ]
