--- a/TTTP6234_Assignment3_P101447_HOOYT.ipynb
+++ b/TTTP6234_Assignment3_P101447_HOOYT.ipynb
@@ -47,10 +47,10 @@
       "metadata": {
         "id": "tRJqjYPoWnAw",
         "colab_type": "code",
-        "outputId": "df42433c-673c-49a9-fc65-39757e01d59f",
+        "outputId": "a4ee17eb-6370-47fe-e305-92ae2d941175",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 181
+          "height": 163
         }
       },
       "source": [
@@ -86,13 +86,12 @@
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n",
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
             "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
             "[nltk_data]     /root/nltk_data...\n",
-            "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
-            "[nltk_data]       date!\n"
+            "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger.zip.\n"
           ],
           "name": "stdout"
         },
@@ -106,7 +105,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 1
+          "execution_count": 4
         }
       ]
     },
@@ -131,7 +130,7 @@
         "scrolled": true,
         "id": "o9xfoBVDWnA3",
         "colab_type": "code",
-        "outputId": "f729f9f5-39d0-472c-b9b0-e5e5500242f2",
+        "outputId": "322cbd48-4aca-423c-b5c7-8129b8978fb7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 90
@@ -179,7 +178,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 5
         }
       ]
     },
@@ -188,7 +187,7 @@
       "metadata": {
         "id": "XLxOHMSFWnBI",
         "colab_type": "code",
-        "outputId": "d6a27aec-cecc-421b-8151-4e63cc2b976b",
+        "outputId": "80414676-d150-4c02-e9f2-789a37a6d55e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 279
@@ -258,19 +257,20 @@
         "\n",
         "def get_adjective_word(setence):\n",
         "  words = []\n",
-        "\n",
+        "  pos_spacy = ['ADJ', 'ADV']\n",
+        "  pos_nltk = ['JJ','JJR', 'JJS','RB','RBS','RBR']\n",
+        "  \n",
         "  ## CHECK BY SPACY FIRST\n",
         "  spacy_words = nlp(u''+setence+'')\n",
         "  for token in spacy_words:\n",
-        "    if token.pos_ == 'ADJ':\n",
-        "      #print(\"SPACY: {}:{}\".format(token.text, token.pos_))\n",
+        "    if token.pos_ in pos_spacy:\n",
         "      words.append(token.text)\n",
         "\n",
         "  ## CHECK BY NLTK\n",
         "  nltk_words = nltk.word_tokenize(setence)\n",
         "  for stc in nltk_words:\n",
         "    nltk_token = nltk.pos_tag(nltk.word_tokenize(stc))\n",
-        "    if nltk_token[0][1] == 'JJ' and nltk_token[0][0] not in words:\n",
+        "    if nltk_token[0][1] in pos_nltk and nltk_token[0][0] not in words:\n",
         "      #print(\"NTLK : {}:{}\".format(nltk_token[0][0], nltk_token[0][1]))\n",
         "      words.append(nltk_token[0][0])\n",
         "    \n",
@@ -316,7 +316,7 @@
         "      'GradientBoostingClassifier': GradientBoostingClassifier(n_estimators=100),\n",
         "      'RandomForestClassifier': RandomForestClassifier(n_estimators=100, random_state=0),\n",
         "      'GaussianNB': GaussianNB(),\n",
-        "      'ANN': MLPClassifier(solver='adam', hidden_layer_sizes=(35,15), random_state=2, activation='relu', max_iter=5000, learning_rate='invscaling'),\n",
+        "      'ANN': MLPClassifier(solver='adam', hidden_layer_sizes=(10,5), random_state=2, activation='relu', max_iter=5000, learning_rate='invscaling'),\n",
         "      'SVN': svm.SVC(C=1.0, kernel='rbf', degree=3, gamma='scale', coef0=0.0, shrinking=True, probability=False, tol=0.001, cache_size=200, class_weight=None, verbose=False, max_iter=2000, decision_function_shape='ovr', random_state=2),\n",
         "      'LinearSVC': LinearSVC(penalty='l2', loss='squared_hinge', dual=True, tol=0.001, C=1.0, multi_class='ovr', fit_intercept=True, intercept_scaling=1, class_weight=None, verbose=0, random_state=None, max_iter=30000),\n",
         "      'LogisticRegression': LogisticRegression(random_state=42, max_iter=8000, multi_class='auto', solver='saga'),\n",
@@ -326,7 +326,7 @@
         "      'GradientBoostingClassifier': GradientBoostingClassifier(n_estimators=100),\n",
         "      'RandomForestClassifier': RandomForestClassifier(n_estimators=100, random_state=0),\n",
         "      'MultinomialNB': MultinomialNB(),\n",
-        "      'ANN': MLPClassifier(solver='adam', hidden_layer_sizes=(35,15), random_state=2, activation='relu', max_iter=5000, learning_rate='invscaling'),\n",
+        "      'ANN': MLPClassifier(solver='adam', hidden_layer_sizes=(10,5), random_state=2, activation='relu', max_iter=5000, learning_rate='invscaling'),\n",
         "      'SVN': svm.SVC(C=1.0, kernel='rbf', degree=3, gamma='scale', coef0=0.0, shrinking=True, probability=False, tol=0.001, cache_size=200, class_weight=None, verbose=False, max_iter=2000, decision_function_shape='ovr', random_state=2),\n",
         "      'LinearSVC': LinearSVC(penalty='l2', loss='squared_hinge', dual=True, tol=0.001, C=1.0, multi_class='ovr', fit_intercept=True, intercept_scaling=1, class_weight=None, verbose=0, random_state=None, max_iter=30000),\n",
         "      'LogisticRegression': LogisticRegression(random_state=42, max_iter=8000, multi_class='auto', solver='saga'),\n",
@@ -349,7 +349,7 @@
       "metadata": {
         "id": "bzR6Ep1hWnBn",
         "colab_type": "code",
-        "outputId": "5d2d9f22-a5e9-4175-ef26-028c4c5649b4",
+        "outputId": "5258b7e8-8bf8-41f3-8a13-7288b1574cb8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -393,7 +393,7 @@
       "metadata": {
         "id": "AGgzmvqqg-QQ",
         "colab_type": "code",
-        "outputId": "ff24703e-518e-434f-fa61-55884061e3a3",
+        "outputId": "22255be4-3678-4d5a-fe50-57f7e3949b7f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 928
@@ -498,7 +498,7 @@
       "metadata": {
         "id": "FlGFChWNWnBw",
         "colab_type": "code",
-        "outputId": "4f75b0b6-f895-4ca8-b36c-8ef12a147410",
+        "outputId": "01a66e82-0061-4cdd-dcc0-375c00611b3e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 928
@@ -522,10 +522,10 @@
             "- TF-IDF\n",
             "-----------------------------------------------------------------------------\n",
             "-- GradientBoostingClassifier\n",
-            "Testing accuracy: 50.00%\n",
-            "Testing F1 score: 49.00%\n",
-            "Testing Precision score: 55.00%\n",
-            "Testing Recall score: 54.00% \n",
+            "Testing accuracy: 60.00%\n",
+            "Testing F1 score: 58.00%\n",
+            "Testing Precision score: 75.00%\n",
+            "Testing Recall score: 67.00% \n",
             "\n",
             "-- RandomForestClassifier\n",
             "Testing accuracy: 40.00%\n",
@@ -632,7 +632,7 @@
       "metadata": {
         "id": "CmHRO1nj_fY5",
         "colab_type": "code",
-        "outputId": "b21d48f2-5f84-4b2b-94a9-dcf1633bff6e",
+        "outputId": "cf75fbad-bd3d-417e-90af-31488ba0058c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -663,7 +663,7 @@
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 90/90 [00:00<00:00, 63485.93it/s]\n"
+            "100%|██████████| 90/90 [00:00<00:00, 143258.96it/s]\n"
           ],
           "name": "stderr"
         }
@@ -674,7 +674,7 @@
       "metadata": {
         "id": "mSBx7K7OvuI5",
         "colab_type": "code",
-        "outputId": "c872f6bd-1d95-4431-dddc-5afcf902ed3a",
+        "outputId": "de44ecdd-94fe-4581-ea8b-2ffaf82e8d0d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 599
@@ -692,44 +692,44 @@
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 90/90 [00:00<00:00, 85404.38it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 20811.96it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 17803.49it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 15068.15it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 16596.50it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 313788.33it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 30257.08it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 17336.61it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 16207.43it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 252162.57it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 12796.62it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 310945.11it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 17075.47it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 17386.92it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 74779.59it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 12753.38it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 16765.29it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 246723.76it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 251658.24it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 19227.19it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 163485.21it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 240131.91it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 212310.10it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 218200.79it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 14193.39it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 215460.82it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 292852.88it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 15449.27it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 138578.33it/s]\n",
-            "100%|██████████| 90/90 [00:00<00:00, 72468.30it/s]\n"
+            "100%|██████████| 90/90 [00:00<00:00, 257846.56it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 19556.90it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 23430.41it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 23346.36it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 25085.55it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 26589.23it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 26083.98it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 21908.73it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 30143.52it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 24394.94it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 97718.71it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 135397.19it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 157220.89it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 21759.70it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 26392.18it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 25791.70it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 118706.72it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 215583.87it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 47009.63it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 77116.93it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 405029.36it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 54550.20it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 68521.94it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 62508.26it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 26414.34it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 24346.17it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 114982.44it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 25384.13it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 21643.68it/s]\n",
+            "100%|██████████| 90/90 [00:00<00:00, 24592.01it/s]\n"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "CPU times: user 13.8 s, sys: 1.02 s, total: 14.8 s\n",
-            "Wall time: 16.1 s\n"
+            "CPU times: user 14.7 s, sys: 1.28 s, total: 15.9 s\n",
+            "Wall time: 16.7 s\n"
           ],
           "name": "stdout"
         }
@@ -740,10 +740,10 @@
       "metadata": {
         "id": "n_3pv7dawC0N",
         "colab_type": "code",
-        "outputId": "c0dc9b9d-8a75-409f-ec79-02ecd031537b",
+        "outputId": "d8ac086c-b8c3-4927-ff67-e7ba5a2c6f7d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 892
+          "height": 1000
         }
       },
       "source": [
@@ -766,28 +766,28 @@
             "- Doc2Vec\n",
             "-----------------------------------------------------------------------------\n",
             "-- GradientBoostingClassifier\n",
-            "Testing accuracy: 50.00%\n",
-            "Testing F1 score: 49.00%\n",
-            "Testing Precision score: 55.00%\n",
-            "Testing Recall score: 54.00% \n",
-            "\n",
-            "-- RandomForestClassifier\n",
             "Testing accuracy: 40.00%\n",
             "Testing F1 score: 38.00%\n",
-            "Testing Precision score: 38.00%\n",
-            "Testing Recall score: 38.00% \n",
+            "Testing Precision score: 44.00%\n",
+            "Testing Recall score: 46.00% \n",
+            "\n",
+            "-- RandomForestClassifier\n",
+            "Testing accuracy: 50.00%\n",
+            "Testing F1 score: 45.00%\n",
+            "Testing Precision score: 72.00%\n",
+            "Testing Recall score: 58.00% \n",
             "\n",
             "-- GaussianNB\n",
-            "Testing accuracy: 40.00%\n",
-            "Testing F1 score: 29.00%\n",
-            "Testing Precision score: 25.00%\n",
-            "Testing Recall score: 33.00% \n",
+            "Testing accuracy: 50.00%\n",
+            "Testing F1 score: 49.00%\n",
+            "Testing Precision score: 50.00%\n",
+            "Testing Recall score: 50.00% \n",
             "\n",
             "-- ANN\n",
-            "Testing accuracy: 20.00%\n",
-            "Testing F1 score: 20.00%\n",
-            "Testing Precision score: 21.00%\n",
-            "Testing Recall score: 21.00% \n",
+            "Testing accuracy: 40.00%\n",
+            "Testing F1 score: 29.00%\n",
+            "Testing Precision score: 20.00%\n",
+            "Testing Recall score: 50.00% \n",
             "\n",
             "-- SVN\n",
             "Testing accuracy: 40.00%\n",
@@ -796,17 +796,14 @@
             "Testing Recall score: 50.00% \n",
             "\n",
             "-- LinearSVC\n",
-            "Testing accuracy: 30.00%\n",
+            "Testing accuracy: 40.00%\n",
             "Testing F1 score: 29.00%\n",
-            "Testing Precision score: 31.00%\n",
-            "Testing Recall score: 33.00% \n",
+            "Testing Precision score: 20.00%\n",
+            "Testing Recall score: 50.00% \n",
             "\n",
             "-- LogisticRegression\n",
-            "Testing accuracy: 20.00%\n",
-            "Testing F1 score: 17.00%\n",
-            "Testing Precision score: 12.00%\n",
-            "Testing Recall score: 25.00% \n",
-            "\n"
+            "Testing accuracy: 40.00%\n",
+            "Testing F1 score: 29.00%\n"
           ],
           "name": "stdout"
         },
@@ -814,9 +811,24 @@
           "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.6/dist-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
             "  _warn_prf(average, modifier, msg_start, len(result))\n"
           ],
           "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Testing Precision score: 20.00%\n",
+            "Testing Recall score: 50.00% \n",
+            "\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -857,13 +869,13 @@
         "\n",
         "| Classifier | Accuracy | F1 | Precision | Recall | \n",
         "| ------------- | ------------- | ------------- | ------------- | ------------- |\n",
-        "| Gradient Boosting | 50.00% | 49.00% | 55.00% | 54.00% |\n",
-        "| Random Forest | 40.00% | 38.00% | 38.00% | 38.00% |\n",
-        "| Gaussian NB | 40.00% | 29.00% | 25.00% | 33.00% |\n",
-        "| ANN | 20.00% | 20.00% | 21.00% | 21.00% |\n",
+        "| Gradient Boosting | 40.00% | 38.00% | 44.00% | 46.00% |\n",
+        "| Random Forest | 50.00% | 45.00% | 72.00% | 58.00% |\n",
+        "| Gaussian NB | 50.00% | 49.00% | 50.00% | 50.00% |\n",
+        "| ANN | 40.00% | 29.00% | 20.00% | 50.00% |\n",
         "| SVN | 40.00% | 29.00% | 20.00% | 50.00% |\n",
-        "| Linear | 30.00% | 29.00% | 31.00% | 33.00% |\n",
-        "| Logistic Regression | 20.00% | 17.00% | 12.00% | 25.00% |\n"
+        "| Linear | 40.00% | 29.00% | 20.00% | 50.00% |\n",
+        "| Logistic Regression | 40.00% | 29.00% | 20.00% | 50.00% |\n"
       ]
     },
     {
@@ -874,10 +886,8 @@
       },
       "source": [
         "**Answer**\n",
-        "* BOW with ANN\n",
-        "* BOW with Linear Regression\n",
-        "* TD-IDF with ANN\n",
-        "* TD-IDF with Linear Regression\n",
+        "* #1 - ANN with BOW and TD-IDF\n",
+        "* #2 - Linear with BOW and TD-IDF\n",
         "\n"
       ]
     }
