--- a/other_topics/topic2_restaurant/Restaurant_Assignment1_P101447_HOOYT.ipynb
+++ b/other_topics/topic2_restaurant/Restaurant_Assignment1_P101447_HOOYT.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "TTTP6234_Restaurant_Assignment1_P101447_HOOYT.ipynb",
+      "name": "Restaurant_Assignment1_P101447_HOOYT.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true
@@ -233,7 +233,7 @@
       },
       "source": [
         "### 4.0 GENERATE POSITIVE LEXICON SENTIMENT\n",
-        "Download [politic_issues_positive_reviews.csv](https://drive.google.com/drive/folders/1XgpcZJrtyJs9GxccH2TfJHSruvHFjJHg?usp=sharing) and upload it to this workspace"
+        "Download [Restautant Review Files](https://drive.google.com/open?id=1etI4hQHrmrKsLcjB932VRfw5gnpLHUvW) and upload it to this workspace\n"
       ]
     },
     {
@@ -273,7 +273,7 @@
       },
       "source": [
         "### 5.0 GENERATE NEGATIVE LEXICON SENTIMENT\n",
-        "Download [politic_issues_negative_reviews.csv](https://drive.google.com/drive/folders/1XgpcZJrtyJs9GxccH2TfJHSruvHFjJHg?usp=sharing) and upload it to this workspace\n"
+        "Download [Restautant Review Files](https://drive.google.com/open?id=1etI4hQHrmrKsLcjB932VRfw5gnpLHUvW) and upload it to this workspace\n"
       ]
     },
     {
