--- a/other_topics/topic2_restaurant/Restaurant_Assignment2_P101447_HOOYT.ipynb
+++ b/other_topics/topic2_restaurant/Restaurant_Assignment2_P101447_HOOYT.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "TTTP6234_Restaurant_Assignment2_P101447_HOOYT.ipynb",
+      "name": "Restaurant_Assignment2_P101447_HOOYT.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true
@@ -89,7 +89,7 @@
       "source": [
         "## 2.0 Read Customed Lexicon Files\n",
         "Read the lexicon sentiment files created from Assignment 1.\n",
-        "Download it from [lexicon_political_master.csv](https://drive.google.com/drive/folders/1iMEVnEUxr-JtUaxuZfHxd3Shnch6149A?usp=sharing)"
+        "Download it from [lexicon_political_master.csv](https://drive.google.com/open?id=1n709oxi-mYMBU2Kju0HvKU0nCWWNFyN-)"
       ]
     },
     {
